<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="elections">Upcoming Elections</string>
    <string name="representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>

    <string name="election_info">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_info">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>

    <string name="follow">Follow Election</string>
    <string name="unfollow">Unfollow Election</string>

    <string name="representatice_search">Representative Search</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>


    <string name="address_line_first">Address Line 1</string>
    <string name="address_line_second">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="address_error_msg">Please enter an address</string>
    <string name="location_error_msg">Something went wrong with location services</string>


</resources>
